Add stats on number of each class

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class_name = {}\n",
+    "with open('signnames.csv') as h:\n",
+    "    next(h)  # skip header\n",
+    "    for line in h:\n",
+    "        class_id, sign_name = line.strip().split(',')\n",
+    "        class_name[int(class_id)] = sign_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -137,9 +153,62 @@
      "output_type": "stream",
      "text": [
       "Number of training examples = 34799\n",
+      "Number of validation examples =  4410\n",
       "Number of testing examples = 12630\n",
       "Image data shape = (32, 32)\n",
-      "Number of classes = 43\n"
+      "Number of classes = 43\n",
+      "Number of examples for each class:\n",
+      " 0  180 \"Speed limit (20km/h)\"\n",
+      " 1 1980 \"Speed limit (30km/h)\"\n",
+      " 2 2010 \"Speed limit (50km/h)\"\n",
+      " 3 1260 \"Speed limit (60km/h)\"\n",
+      " 4 1770 \"Speed limit (70km/h)\"\n",
+      " 5 1650 \"Speed limit (80km/h)\"\n",
+      " 6  360 \"End of speed limit (80km/h)\"\n",
+      " 7 1290 \"Speed limit (100km/h)\"\n",
+      " 8 1260 \"Speed limit (120km/h)\"\n",
+      " 9 1320 \"No passing\"\n",
+      "10 1800 \"No passing for vehicles over 3.5 metric tons\"\n",
+      "11 1170 \"Right-of-way at the next intersection\"\n",
+      "12 1890 \"Priority road\"\n",
+      "13 1920 \"Yield\"\n",
+      "14  690 \"Stop\"\n",
+      "15  540 \"No vehicles\"\n",
+      "16  360 \"Vehicles over 3.5 metric tons prohibited\"\n",
+      "17  990 \"No entry\"\n",
+      "18 1080 \"General caution\"\n",
+      "19  180 \"Dangerous curve to the left\"\n",
+      "20  300 \"Dangerous curve to the right\"\n",
+      "21  270 \"Double curve\"\n",
+      "22  330 \"Bumpy road\"\n",
+      "23  450 \"Slippery road\"\n",
+      "24  240 \"Road narrows on the right\"\n",
+      "25 1350 \"Road work\"\n",
+      "26  540 \"Traffic signals\"\n",
+      "27  210 \"Pedestrians\"\n",
+      "28  480 \"Children crossing\"\n",
+      "29  240 \"Bicycles crossing\"\n",
+      "30  390 \"Beware of ice/snow\"\n",
+      "31  690 \"Wild animals crossing\"\n",
+      "32  210 \"End of all speed and passing limits\"\n",
+      "33  599 \"Turn right ahead\"\n",
+      "34  360 \"Turn left ahead\"\n",
+      "35 1080 \"Ahead only\"\n",
+      "36  330 \"Go straight or right\"\n",
+      "37  180 \"Go straight or left\"\n",
+      "38 1860 \"Keep right\"\n",
+      "39  270 \"Keep left\"\n",
+      "40  300 \"Roundabout mandatory\"\n",
+      "41  210 \"End of no passing\"\n",
+      "42  210 \"End of no passing by vehicles over 3.5 metric tons\"\n",
+      "\n",
+      "Most represented classe(es) (2010 representatives):\n",
+      " 2 \"Speed limit (50km/h)\"\n",
+      "\n",
+      "Least represented classe(es) (180 representatives):\n",
+      " 0 \"Speed limit (20km/h)\"\n",
+      "19 \"Dangerous curve to the left\"\n",
+      "37 \"Go straight or left\"\n"
      ]
     }
    ],
@@ -162,10 +231,34 @@
     "# TODO: How many unique classes/labels there are in the dataset.\n",
     "n_classes = len(set(y_train))\n",
     "\n",
+    "n_examples_by_class = [0] * n_classes\n",
+    "for class_id in y_train:\n",
+    "    n_examples_by_class[class_id] += 1\n",
+    "\n",
+    "most_represented_classes = [class_id for class_id in range(n_classes)\n",
+    "                            if n_examples_by_class[class_id] == max(n_examples_by_class)]\n",
+    "\n",
+    "least_represented_classes = [class_id for class_id in range(n_classes)\n",
+    "                             if n_examples_by_class[class_id] == min(n_examples_by_class)]\n",
+    "\n",
     "print(\"Number of training examples =\", n_train)\n",
+    "print(\"Number of validation examples = \", n_validation)\n",
     "print(\"Number of testing examples =\", n_test)\n",
     "print(\"Image data shape =\", image_shape)\n",
-    "print(\"Number of classes =\", n_classes)"
+    "print(\"Number of classes =\", n_classes)\n",
+    "print(\"Number of examples for each class:\")\n",
+    "for class_id, n_examples in enumerate(n_examples_by_class):\n",
+    "    print('{:>2} {:>4} \"{}\"'.format(class_id, n_examples, class_name[class_id]))\n",
+    "print()\n",
+    "\n",
+    "print(\"Most represented classe(es) ({} representatives):\".format(max(n_examples_by_class)))\n",
+    "for class_id in most_represented_classes:\n",
+    "    print('{:>2} \"{}\"'.format(class_id, class_name[class_id]))\n",
+    "print()\n",
+    "\n",
+    "print(\"Least represented classe(es) ({} representatives):\".format(min(n_examples_by_class)))\n",
+    "for class_id in least_represented_classes:\n",
+    "    print('{:>2} \"{}\"'.format(class_id, class_name[class_id]))\n"
    ]
   },
   {
@@ -613,22 +706,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class_name = {}\n",
-    "with open('signnames.csv') as h:\n",
-    "    next(h)  # skip header\n",
-    "    for line in h:\n",
-    "        class_id, sign_name = line.strip().split(',')\n",
-    "        class_name[int(class_id)] = sign_name"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# # sanity check on training images\n",
@@ -903,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
