Print out train/validation/test accuracy, top 5

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -626,6 +626,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, get_latest_save_path())\n",
+    "    train_acc = sess.run(accuracy_operation, feed_dict={x: X_train, y: y_train, keep_prob: 1})\n",
+    "    validation_acc = sess.run(accuracy_operation, feed_dict={x: X_validation, y: y_validation, keep_prob: 1})\n",
+    "    test_acc = sess.run(accuracy_operation, feed_dict={x: X_test, y: y_test, keep_prob: 1})\n",
+    "\n",
+    "print('Training set accuracy: {}'.format(train_acc))\n",
+    "print('Validation set accuracy: {}'.format(validation_acc))\n",
+    "print('Testing set accuracy: {}'.format(test_acc))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -882,7 +901,7 @@
    "source": [
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, get_latest_save_path())\n",
-    "    top_predictions = sess.run(tf.nn.top_k(tf.nn.softmax(logits), k=3), feed_dict={x: extra_imgs, keep_prob: 1})\n",
+    "    top_predictions = sess.run(tf.nn.top_k(tf.nn.softmax(logits), k=5), feed_dict={x: extra_imgs, keep_prob: 1})\n",
     "\n",
     "top_predictions"
    ]
